@@ -382,8 +382,8 @@ static NXSL_ExtFunction m_nxslDCIFunctions[] =
    { _T("FindDCIByDescription"), F_FindDCIByDescription, 2 },
 	{ _T("GetAvgDCIValue"), F_GetAvgDCIValue, 4 },
    { _T("GetDCIObject"), F_GetDCIObject, 2 },
-   { _T("GetDCIValue"), F_GetDCIValue, 2 },
    { _T("GetDCIRawValue"), F_GetDCIRawValue, 2 },
+   { _T("GetDCIValue"), F_GetDCIValue, 2 },
    { _T("GetDCIValueByDescription"), F_GetDCIValueByDescription, 2 },
    { _T("GetDCIValueByName"), F_GetDCIValueByName, 2 },
 	{ _T("GetMaxDCIValue"), F_GetMaxDCIValue, 4 },
